--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-nebulaVersion = "0.2.13b"
+nebulaVersion = "0.2.13c"
 shadowVersion = "8.1.1"
 kotlinVersion = "2.0.0"
 kotlinCoroutinesVersion = "1.9.0-RC"
