--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-nebulaVersion = "0.2.13c"
+nebulaVersion = "0.2.13e"
 shadowVersion = "8.1.1"
-kotlinVersion = "2.0.0"
-kotlinCoroutinesVersion = "1.9.0-RC"
+kotlinVersion = "2.1.0"
+kotlinCoroutinesVersion = "1.9.0"
 groovyVersion = "4.0.22"
 gsonVersion = "2.10"
 
