修复JSON解析及序列化中的转义字符处理
完善转义字符逻辑，确保JSON字符串的正确性；新增测试用例验证序列化和解析结果；升级Nebula版本至0.2.15b以保持依赖最新。

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-nebulaVersion = "0.2.15a"
+nebulaVersion = "0.2.15b"
 shadowVersion = "8.1.1"
 kotlinVersion = "2.1.0"
 kotlinCoroutinesVersion = "1.9.0"
