--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,14 @@
 [versions]
-nebulaVersion = "0.2.15b"
+nebulaVersion = "0.2.15c"
 shadowVersion = "8.1.1"
 kotlinVersion = "2.1.0"
 kotlinCoroutinesVersion = "1.9.0"
-groovyVersion = "4.0.22"
 gsonVersion = "2.10"
 
 [libraries]
 kotlinStdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinVersion" }
 kotlinReflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlinVersion" }
 kotlinCoroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinCoroutinesVersion" }
-groovy = { group = "org.apache.groovy", name = "groovy", version.ref = "groovyVersion" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gsonVersion" }
 
 [bundles]
