chore: 更新 nebulaVersion 到 0.2.21 并优化核心功能
更新版本号为 0.2.21，同时优化 ConfigContainerImpl 的 autoScan 行为，避免 autoScan 未关闭时执行。改进 EventBusImpl 使用序列操作，提升性能。调整编译选项以支持非局部 break 和 continue，增强代码灵活性。

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-nebulaVersion = "0.2.20"
+nebulaVersion = "0.2.21"
+#depn
 shadowVersion = "8.1.1"
 kotlinVersion = "2.1.0"
 kotlinCoroutinesVersion = "1.9.0"
